+ (CMS) Fixed visibility issues in Zone Editor modal Type search when using Dark Mode. Search results were difficult to see due to low contrast. (Fixes #6557)

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -7280,11 +7280,12 @@ table tbody tr td .required-indicator::after {
 .chosen-container .chosen-results li em {
   font-style: normal;
   background: #feffde;
+  color: var(--base-interface-strong);
 }
 .chosen-container .chosen-results li.group-result {
   display: list-item;
   font-weight: var(--font-weight-bold);
-  color: #999;
+  color: var(--color-interface-medium);
   cursor: default;
 }
 .chosen-container .chosen-results li.group-option {
